--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-photo-view": "^1.2.3",
+    "react-slick": "^0.29.0",
     "sass": "^1.59.3",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
