--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-photo-view": "^1.2.3",
     "react-svg-worldmap": "^2.0.0-alpha.3",
     "sass": "^1.59.3",
